--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <!-- pybo CSS -->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">-->
-    <title>파이보임!</title>
+    <title>파이보임! 수정</title>
 </head>
 <body>
 {% include "navbar.html" %}
